[gd_scene load_steps=5 format=3 uid="uid://d17oy4q27kuku"]

[ext_resource type="PackedScene" uid="uid://cupawubs5c47x" path="res://scenes/map.tscn" id="1_3aj0k"]
[ext_resource type="Script" path="res://scenes/Main.gd" id="1_wjfm3"]
[ext_resource type="PackedScene" uid="uid://dhw45dswsem00" path="res://scenes/camera_control.tscn" id="3_fd41k"]
[ext_resource type="Texture2D" uid="uid://ggvd587qrbls" path="res://images/reload_arrow.jpg" id="4_tvj68"]

[node name="Main" type="Node" node_paths=PackedStringArray("map")]
script = ExtResource("1_wjfm3")
map = NodePath("Map")

[node name="Map" parent="." instance=ExtResource("1_3aj0k")]

[node name="CameraControl" parent="." instance=ExtResource("3_fd41k")]
visibility_layer = 0

[node name="Ui" type="CanvasLayer" parent="."]

[node name="ReloadButton" type="Button" parent="Ui"]
offset_right = 128.0
offset_bottom = 128.0
icon = ExtResource("4_tvj68")

[node name="WorldType" type="OptionButton" parent="Ui"]
offset_top = 200.0
offset_right = 136.0
offset_bottom = 231.0
selected = 0
item_count = 2
popup/item_0/text = "Overworld"
popup/item_1/text = "Underworld"
popup/item_1/id = 1

[connection signal="pressed" from="Ui/ReloadButton" to="." method="_on_reload_button_pressed"]
[connection signal="item_selected" from="Ui/WorldType" to="." method="_on_world_type_item_selected"]
